Adjust image and lines pattern positions, fix overflowing content

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,7 +12,7 @@
   position: relative;
 
   .container {
-    max-width: 1110px;
+    max-width: 1210px;
     margin: 0 auto;
 
     > :first-child {
@@ -24,16 +24,13 @@
 // Feature Component
 .feature {
   height: 720px;
+  padding: 0 50px;
   margin-bottom: 100px;
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 5;
-
-  picture {
-    height: 100%;
-  }
 
   &:last-child {
     margin-bottom: $feature-offset;
@@ -57,7 +54,7 @@
 .feature-description {
   max-width: 445px;
   margin-top: $feature-offset-fix;
-  margin-left: 20px;
+  margin: 0 20px;
 
   h2 {
     margin: 55px 0 27px;
@@ -73,6 +70,7 @@
   .feature {
     text-align: center;
     height: auto;
+    padding: 0 24px;
     margin-bottom: 118px;
 
     &:last-child {
@@ -88,7 +86,7 @@
   }
 
   .feature-image {
-    margin: 0 30px;
+    width: 100%;
   }
 
   .feature-description {
@@ -102,8 +100,10 @@
 
 @media screen and (max-width: $break-point-sm) {
   .feature {
-    margin-left: 24px;
-    margin-right: 24px;
+    // margin-left: 24px;
+    // margin-right: 24px;
+    width: 100%;
+    padding: 0 24px;
     margin-bottom: 100px;
 
     &:last-child {
@@ -111,6 +111,10 @@
         margin-bottom: 100px;
       }
     }
+  }
+
+  .feature-image {
+    box-shadow: 0 40px 40px -40px rgb(0, 0, 0);
   }
 
   .feature-description {
@@ -148,7 +152,7 @@
 
 .bg-pattern-lines {
   position: absolute;
-  right: -8vw;
+  right: 0;
   top: 330px;
 }
 
